# parallel-ucsp

./: README.md
cuda/: image.cu  matrix.cu
hybrid/: bears.cc
mpi/: Makefile  builtin_broadcast.cc  gen.py  own_broadcast.cc  sort.cc
mpi/gameoflife/: CMakeLists.txt  README.md  main.cpp
openmp/: pi.cc  schedule.cc  sort.cc  sort2.cc  trapezoid.cc
pthread/: example-condition.c  example-join.c  example-mutex.c  example1.c
sandwich/: .gitignore  Makefile  gen.cc  run_parallel.sh  run_serial.sh  sandwich_parallel.cc  sandwich_serial.cc
strassen/: CMakeLists.txt  comparator.cc  main.cc  matrix.h  matrix_parallel.h  matrix_parallel1.h  matrix_parallel2.h  matrix_sequential.h  parallel1.cc  parallel2.cc  sequential.cc
vector/: mul.cc  serial  vector
